--- a/LandViewController/public_html/WEB-INF/web.xml
+++ b/LandViewController/public_html/WEB-INF/web.xml
@@ -76,6 +76,11 @@
     <dispatcher>FORWARD</dispatcher>
     <dispatcher>REQUEST</dispatcher>
   </filter-mapping>
+  <filter-mapping>
+    <filter-name>ApplicationSessionExpiryFilter</filter-name>
+    <servlet-name>Faces Servlet</servlet-name>
+    <dispatcher>REQUEST</dispatcher>
+  </filter-mapping>
   <context-param>
     <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
     <param-value>client</param-value>
