--- a/LandViewController/public_html/WEB-INF/web.xml
+++ b/LandViewController/public_html/WEB-INF/web.xml
@@ -61,7 +61,7 @@
   </filter>
   <filter>
       <filter-name>ApplicationSessionExpiryFilter</filter-name>
-      <filter-class>mx.com.televisa.landamark.saml2.SSOFilter</filter-class>
+      <filter-class>mx.com.televisa.landamark.filters.SessionFilter</filter-class>
    </filter>   
   <filter-mapping>
     <filter-name>trinidad</filter-name>
@@ -142,7 +142,7 @@
    </welcome-file-list>
   <resource-ref>
       <description>Integration Landmark Data Source</description>
-      <res-ref-name>jdbc/LANDM_DS_ATS</res-ref-name>
+      <res-ref-name>jdbc/MOR_DS_PG1</res-ref-name>
       <res-type>javax.sql.DataSource</res-type>
       <res-auth>Container</res-auth>
    </resource-ref>
